[package]
name = "password_vault"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
passwords = "3.1.16"
rand = "0.8.5"
rand_chacha = "0.3.1"
rsa = "0.9.6"
rsa_keygen = "1.0.7"
secrecy = "0.8.0"
sha2 = "0.10.8"
winapi = "0.3.9"
zeroize = "1.8.1"
